@@ -1,111 +1,229 @@
-Simple install procedure
-========================
+Copyright (C) 1994, 1995, 1996, 1999, 2000, 2001, 2002 Free Software
+Foundation, Inc.
 
-  % gzip -cd glib-2.6.1.tar.gz | tar xvf -  # unpack the sources
-  % cd glib-2.6.1                           # change to the toplevel directory
-  % ./configure                             # run the `configure' script
-  % make                                    # build GLIB
+   This file is free documentation; the Free Software Foundation gives
+unlimited permission to copy, distribute and modify it.
 
-  [ Become root if necessary ]
-  % rm -rf /install-prefix/include/glib.h /install-prefix/include/gmodule.h
-  % make install                            # install GLIB
+Basic Installation
+==================
 
-Requirements
-============
+   These are generic installation instructions.
 
-GLib-2.0 requires pkg-config, which is tool for tracking the
-compilation flags needed for libraries. (For each library, a small .pc
-text file is installed in a standard location that contains the
-compilation flags needed for that library along with version number
-information.) Information about pkg-config can be found at:
+   The `configure' shell script attempts to guess correct values for
+various system-dependent variables used during compilation.  It uses
+those values to create a `Makefile' in each directory of the package.
+It may also create one or more `.h' files containing system-dependent
+definitions.  Finally, it creates a shell script `config.status' that
+you can run in the future to recreate the current configuration, and a
+file `config.log' containing compiler output (useful mainly for
+debugging `configure').
 
-  http://www.freedesktop.org/software/pkgconfig/
+   It can also use an optional file (typically called `config.cache'
+and enabled with `--cache-file=config.cache' or simply `-C') that saves
+the results of its tests to speed up reconfiguring.  (Caching is
+disabled by default to prevent problems with accidental use of stale
+cache files.)
 
-GNU make (http://www.gnu.org/software/make) is also recommended.
+   If you need to do unusual things to compile the package, please try
+to figure out how `configure' could check whether to do them, and mail
+diffs or instructions to the address given in the `README' so they can
+be considered for the next release.  If you are using the cache, and at
+some point `config.cache' contains results you don't want to keep, you
+may remove or edit it.
 
-In order to implement conversions between character sets,
-GLib requires an implementation of the standard iconv() routine.
-Most modern systems will have a suitable implementation, however
-many older systems lack an iconv() implementation. On such systems, 
-you must install the libiconv library. This can be found at:
+   The file `configure.ac' (or `configure.in') is used to create
+`configure' by a program called `autoconf'.  You only need
+`configure.ac' if you want to change it or regenerate `configure' using
+a newer version of `autoconf'.
 
- http://www.gnu.org/software/libiconv/
+The simplest way to compile this package is:
 
-If your system has an iconv implementation but you want to use
-libiconv instead, you can pass the --with-libiconv option to
-configure. This forces libiconv to be used. 
+  1. `cd' to the directory containing the package's source code and type
+     `./configure' to configure the package for your system.  If you're
+     using `csh' on an old version of System V, you might need to type
+     `sh ./configure' instead to prevent `csh' from trying to execute
+     `configure' itself.
 
-Note that if you have libiconv installed in your default include
-search path (for instance, in /usr/local/), but don't enable
-it, you will get an error while compiling GLib because the
-iconv.h that libiconv installs hides the system iconv.
+     Running `configure' takes awhile.  While running, it prints some
+     messages telling which features it is checking for.
 
-If you are using the native iconv implementation on Solaris
-instead of libiconv, you'll need to make sure that you have 
-the converters between locale encodings and UTF-8 installed.
-At a minimum you'll need the SUNWuiu8 package. You probably
-should also install the SUNWciu8, SUNWhiu8, SUNWjiu8, and
-SUNWkiu8 packages.
+  2. Type `make' to compile the package.
 
-The native iconv on Compaq Tru64 doesn't contain support for
-UTF-8, so you'll need to use GNU libiconv instead. (When
-using GNU libiconv for GLib, you'll need to use GNU libiconv
-for GNU gettext as well.) This probably applies to related
-operating systems as well.
+  3. Optionally, type `make check' to run any self-tests that come with
+     the package.
 
-Finally, for message catalog handling, GLib requires an implementation
-of gettext(). If your system doesn't provide this functionality,
-you should use the libintl library from the GNU gettext package,
-available from:
+  4. Type `make install' to install the programs and any data files and
+     documentation.
 
- http://www.gnu.org/software/gettext/
+  5. You can remove the program binaries and object files from the
+     source code directory by typing `make clean'.  To also remove the
+     files that `configure' created (so you can compile the package for
+     a different kind of computer), type `make distclean'.  There is
+     also a `make maintainer-clean' target, but that is intended mainly
+     for the package's developers.  If you use it, you may have to get
+     all sorts of other programs in order to regenerate files that came
+     with the distribution.
 
-The Nitty-Gritty
+Compilers and Options
+=====================
+
+   Some systems require unusual options for compilation or linking that
+the `configure' script does not know about.  Run `./configure --help'
+for details on some of the pertinent environment variables.
+
+   You can give `configure' initial values for configuration parameters
+by setting variables in the command line or in the environment.  Here
+is an example:
+
+     ./configure CC=c89 CFLAGS=-O2 LIBS=-lposix
+
+   *Note Defining Variables::, for more details.
+
+Compiling For Multiple Architectures
+====================================
+
+   You can compile the package for more than one kind of computer at the
+same time, by placing the object files for each architecture in their
+own directory.  To do this, you must use a version of `make' that
+supports the `VPATH' variable, such as GNU `make'.  `cd' to the
+directory where you want the object files and executables to go and run
+the `configure' script.  `configure' automatically checks for the
+source code in the directory that `configure' is in and in `..'.
+
+   If you have to use a `make' that does not support the `VPATH'
+variable, you have to compile the package for one architecture at a
+time in the source code directory.  After you have installed the
+package for one architecture, use `make distclean' before reconfiguring
+for another architecture.
+
+Installation Names
+==================
+
+   By default, `make install' will install the package's files in
+`/usr/local/bin', `/usr/local/man', etc.  You can specify an
+installation prefix other than `/usr/local' by giving `configure' the
+option `--prefix=PATH'.
+
+   You can specify separate installation prefixes for
+architecture-specific files and architecture-independent files.  If you
+give `configure' the option `--exec-prefix=PATH', the package will use
+PATH as the prefix for installing programs and libraries.
+Documentation and other data files will still use the regular prefix.
+
+   In addition, if you use an unusual directory layout you can give
+options like `--bindir=PATH' to specify different values for particular
+kinds of files.  Run `configure --help' for a list of the directories
+you can set and what kinds of files go in them.
+
+   If the package supports it, you can cause programs to be installed
+with an extra prefix or suffix on their names by giving `configure' the
+option `--program-prefix=PREFIX' or `--program-suffix=SUFFIX'.
+
+Optional Features
+=================
+
+   Some packages pay attention to `--enable-FEATURE' options to
+`configure', where FEATURE indicates an optional part of the package.
+They may also pay attention to `--with-PACKAGE' options, where PACKAGE
+is something like `gnu-as' or `x' (for the X Window System).  The
+`README' should mention any `--enable-' and `--with-' options that the
+package recognizes.
+
+   For packages that use the X Window System, `configure' can usually
+find the X include and library files automatically, but if it doesn't,
+you can use the `configure' options `--x-includes=DIR' and
+`--x-libraries=DIR' to specify their locations.
+
+Specifying the System Type
+==========================
+
+   There may be some features `configure' cannot figure out
+automatically, but needs to determine by the type of machine the package
+will run on.  Usually, assuming the package is built to be run on the
+_same_ architectures, `configure' can figure that out, but if it prints
+a message saying it cannot guess the machine type, give it the
+`--build=TYPE' option.  TYPE can either be a short name for the system
+type, such as `sun4', or a canonical name which has the form:
+
+     CPU-COMPANY-SYSTEM
+
+where SYSTEM can have one of these forms:
+
+     OS KERNEL-OS
+
+   See the file `config.sub' for the possible values of each field.  If
+`config.sub' isn't included in this package, then this package doesn't
+need to know the machine type.
+
+   If you are _building_ compiler tools for cross-compiling, you should
+use the `--target=TYPE' option to select the type of system they will
+produce code for.
+
+   If you want to _use_ a cross compiler, that generates code for a
+platform different from the build platform, you should specify the
+"host" platform (i.e., that on which the generated programs will
+eventually be run) with `--host=TYPE'.
+
+Sharing Defaults
 ================
 
-Complete information about installing GLib can be found 
-in the file:
-  
- docs/reference/glib/html/glib-building.html
-  
-Or online at:
-  
- http://developer.gnome.org/doc/API/2.0/glib/glib-building.html
+   If you want to set default values for `configure' scripts to share,
+you can create a site shell script called `config.site' that gives
+default values for variables like `CC', `cache_file', and `prefix'.
+`configure' looks for `PREFIX/share/config.site' if it exists, then
+`PREFIX/etc/config.site' if it exists.  Or, you can set the
+`CONFIG_SITE' environment variable to the location of the site script.
+A warning: not all `configure' scripts look for a site script.
 
+Defining Variables
+==================
 
-Installation directories
-========================
+   Variables not defined in a site shell script can be set in the
+environment passed to `configure'.  However, some packages may run
+configure again during the build, and the customized values of these
+variables may be lost.  In order to avoid this problem, you should set
+them in the `configure' command line, using `VAR=value'.  For example:
 
-The location of the installed files is determined by the --prefix
-and --exec-prefix options given to configure. There are also more
-detailed flags to control individual directories. However, the
-use of these flags is not tested.
+     ./configure CC=/usr/local2/bin/gcc
 
-One particular detail to note, is that the architecture-dependent
-include file glibconfig.h is installed in:
+will cause the specified gcc to be used as the C compiler (unless it is
+overridden in the site shell script).
 
-  $exec_prefix/lib/glib/include/
+`configure' Invocation
+======================
 
-if you have a version in $prefix/include, this is out of date
-and should be deleted.
+   `configure' recognizes the following options to control how it
+operates.
 
-.pc files for the various libraries are installed in 
-$exec_prefix/lib/pkgconfig to provide information when compiling
-other packages that depend on GLib. If you set PKG_CONFIG_PATH
-so that it points to this directory, then you can get the 
-correct include flags and library flags for compiling a GLib
-application with:
+`--help'
+`-h'
+     Print a summary of the options to `configure', and exit.
 
- pkg-config --cflags glib-2.0
- pkg-config --libs glib-2.0
+`--version'
+`-V'
+     Print the version of Autoconf used to generate the `configure'
+     script, and exit.
 
+`--cache-file=FILE'
+     Enable the cache: use and save the results of the tests in FILE,
+     traditionally `config.cache'.  FILE defaults to `/dev/null' to
+     disable caching.
 
-Cross-compiling GLib
-====================
+`--config-cache'
+`-C'
+     Alias for `--cache-file=config.cache'.
 
-Information about cross-compilation of GLib can be found 
-in the file:
-  
- docs/reference/glib/html/glib-cross-compiling.html
-  
-Or online at:
+`--quiet'
+`--silent'
+`-q'
+     Do not print messages saying which checks are being made.  To
+     suppress all normal output, redirect it to `/dev/null' (any error
+     messages will still be shown).
+
+`--srcdir=DIR'
+     Look for the package's source code in directory DIR.  Usually
+     `configure' can determine that directory automatically.
+
+`configure' also accepts some other, not widely useful, options.  Run
+`configure --help' for more details.
+
