@@ -201,7 +201,7 @@ install-libtool-import-lib:
 #	directive in .def files.)
 #
 	for entry in `grep PRIVATE glib.def | sed -e 's/PRIVATE//'`; do \
-	  file=`$(NM) -A .libs/libglib-2.0.dll.a | tr -d '\r' | grep -m 1 -E $$entry'$$' | cut -d: -f2`; \
+	  file=`$(NM) -A .libs/libglib-2.0.dll.a | tr -d '\r' | grep -E $$entry'$$' | head -n 1 | cut -d: -f2`; \
 	  ar d .libs/libglib-2.0.dll.a $$file; \
 	done
 	$(RANLIB) .libs/libglib-2.0.dll.a
